samples/_failures_safe/1761398618_6570be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5e09fd8.c: In function ‘main’:
./samples/SAFE/__tmp_d5e09fd8.c:129:13: error: expected ‘{’ at end of input
  129 |             struct
      |             ^~~~~~
./samples/SAFE/__tmp_d5e09fd8.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5e09fd8.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5e09fd8.c:129:13: error: expected declaration or statement at end of input
